include_directories(".")

set(SOURCE_FILES
    coreinit/coreinit.cpp
    coreinit/coreinit_alarm.cpp
    coreinit/coreinit_atomic64.cpp
    coreinit/coreinit_cache.cpp
    coreinit/coreinit_core.cpp
    coreinit/coreinit_debug.cpp
    coreinit/coreinit_device.cpp
    coreinit/coreinit_dynload.cpp
    coreinit/coreinit_event.cpp
    coreinit/coreinit_exception.cpp
    coreinit/coreinit_expheap.cpp
    coreinit/coreinit_fastmutex.cpp
    coreinit/coreinit_frameheap.cpp
    coreinit/coreinit_fs.cpp
    coreinit/coreinit_ghs.cpp
    coreinit/coreinit_mcp.cpp
    coreinit/coreinit_memheap.cpp
    coreinit/coreinit_memlist.cpp
    coreinit/coreinit_memory.cpp
    coreinit/coreinit_messagequeue.cpp
    coreinit/coreinit_mutex.cpp
    coreinit/coreinit_rendezvous.cpp
    coreinit/coreinit_scheduler.cpp
    coreinit/coreinit_semaphore.cpp
    coreinit/coreinit_shared.cpp
    coreinit/coreinit_spinlock.cpp
    coreinit/coreinit_systeminfo.cpp
    coreinit/coreinit_taskqueue.cpp
    coreinit/coreinit_thread.cpp
    coreinit/coreinit_threadqueue.cpp
    coreinit/coreinit_time.cpp
    coreinit/coreinit_userconfig.cpp
    erreula/erreula.cpp
    erreula/erreula_errorviewer.cpp
    gameloader/gameloader.cpp
    gx2/gx2.cpp
    gx2/gx2_cbpool.cpp
    gx2/gx2_clear.cpp
    gx2/gx2_contextstate.cpp
    gx2/gx2_debug.cpp
    gx2/gx2_display.cpp
    gx2/gx2_displaylist.cpp
    gx2/gx2_draw.cpp
    gx2/gx2_enum_string.cpp
    gx2/gx2_event.cpp
    gx2/gx2_fetchshader.cpp
    gx2/gx2_format.cpp
    gx2/gx2_mem.cpp
    gx2/gx2_registers.cpp
    gx2/gx2_sampler.cpp
    gx2/gx2_shaders.cpp
    gx2/gx2_state.cpp
    gx2/gx2_surface.cpp
    gx2/gx2_swap.cpp
    gx2/gx2_temp.cpp
    gx2/gx2_texture.cpp
    gx2/gx2r_resource.cpp
    nn_ac/nn_ac.cpp
    nn_ac/nn_ac_core.cpp
    nn_act/nn_act.cpp
    nn_act/nn_act_core.cpp
    nn_fp/nn_fp.cpp
    nn_fp/nn_fp_core.cpp
    nn_nfp/nn_nfp.cpp
    nn_nfp/nn_nfp_core.cpp
    nn_result.cpp
    nn_save/nn_save.cpp
    nn_save/nn_save_core.cpp
    nn_temp/nn_temp.cpp
    nn_temp/nn_temp_core.cpp
    padscore/padscore.cpp
    padscore/padscore_kpad.cpp
    padscore/padscore_kpad_status.cpp
    padscore/padscore_wpad.cpp
    proc_ui/proc_ui.cpp
    proc_ui/proc_ui_core.cpp
    snd_core/snd_core.cpp
    snd_core/snd_core_core.cpp
    snd_core/snd_core_device.cpp
    swkbd/swkbd.cpp
    swkbd/swkbd_core.cpp
    sysapp/sysapp.cpp
    sysapp/sysapp_title.cpp
    vpad/vpad.cpp
    vpad/vpad_core.cpp
    vpad/vpad_status.cpp
    zlib125/zlib125.cpp
    zlib125/zlib125_core.cpp
    )
set(HEADER_FILES
    coreinit/coreinit.h
    coreinit/coreinit_alarm.h
    coreinit/coreinit_atomic64.h
    coreinit/coreinit_cache.h
    coreinit/coreinit_core.h
    coreinit/coreinit_debug.h
    coreinit/coreinit_device.h
    coreinit/coreinit_dynload.h
    coreinit/coreinit_event.h
    coreinit/coreinit_exception.h
    coreinit/coreinit_expheap.h
    coreinit/coreinit_fastmutex.h
    coreinit/coreinit_frameheap.h
    coreinit/coreinit_fs.h
    coreinit/coreinit_ghs.h
    coreinit/coreinit_ios.h
    coreinit/coreinit_mcp.h
    coreinit/coreinit_memheap.h
    coreinit/coreinit_memlist.h
    coreinit/coreinit_memory.h
    coreinit/coreinit_messagequeue.h
    coreinit/coreinit_mutex.h
    coreinit/coreinit_queue.h
    coreinit/coreinit_rendezvous.h
    coreinit/coreinit_scheduler.h
    coreinit/coreinit_sci.h
    coreinit/coreinit_semaphore.h
    coreinit/coreinit_shared.h
    coreinit/coreinit_spinlock.h
    coreinit/coreinit_systeminfo.h
    coreinit/coreinit_taskqueue.h
    coreinit/coreinit_thread.h
    coreinit/coreinit_threadqueue.h
    coreinit/coreinit_time.h
    coreinit/coreinit_userconfig.h
    erreula/erreula.h
    erreula/erreula_errorviewer.h
    gameloader/gameloader.h
    gx2/gx2.h
    gx2/gx2_cbpool.h
    gx2/gx2_clear.h
    gx2/gx2_contextstate.h
    gx2/gx2_debug.h
    gx2/gx2_display.h
    gx2/gx2_displaylist.h
    gx2/gx2_draw.h
    gx2/gx2_enum.h
    gx2/gx2_enum_string.h
    gx2/gx2_event.h
    gx2/gx2_format.h
    gx2/gx2_mem.h
    gx2/gx2_registers.h
    gx2/gx2_sampler.h
    gx2/gx2_shaders.h
    gx2/gx2_state.h
    gx2/gx2_surface.h
    gx2/gx2_swap.h
    gx2/gx2_temp.h
    gx2/gx2_texture.h
    gx2/gx2r_resource.h
    nn_ac/nn_ac.h
    nn_ac/nn_ac_core.h
    nn_ac/nn_ac_result.h
    nn_act/nn_act.h
    nn_act/nn_act_core.h
    nn_act/nn_act_result.h
    nn_fp/nn_fp.h
    nn_fp/nn_fp_core.h
    nn_nfp/nn_nfp.h
    nn_nfp/nn_nfp_core.h
    nn_nfp/nn_nfp_result.h
    nn_result.h
    nn_save/nn_save.h
    nn_save/nn_save_core.h
    nn_temp/nn_temp.h
    nn_temp/nn_temp_core.h
    padscore/padscore.h
    padscore/padscore_kpad.h
    padscore/padscore_kpad_status.h
    padscore/padscore_wpad.h
    proc_ui/proc_ui.h
    proc_ui/proc_ui_core.h
    snd_core/snd_core.h
    snd_core/snd_core_core.h
    snd_core/snd_core_device.h
    snd_core/snd_core_result.h
    swkbd/swkbd.h
    swkbd/swkbd_core.h
    sysapp/sysapp.h
    sysapp/sysapp_title.h
    vpad/vpad.h
    vpad/vpad_core.h
    vpad/vpad_status.h
    zlib125/zlib125.h
    )

add_library(modules STATIC ${SOURCE_FILES} ${HEADER_FILES})
