include_directories(".")

set(SOURCE_FILES
    coreinit/coreinit.cpp
    coreinit/coreinit_alarm.cpp
    coreinit/coreinit_atomic64.cpp
    coreinit/coreinit_cache.cpp
    coreinit/coreinit_core.cpp
    coreinit/coreinit_debug.cpp
    coreinit/coreinit_device.cpp
    coreinit/coreinit_dynload.cpp
    coreinit/coreinit_event.cpp
    coreinit/coreinit_exception.cpp
    coreinit/coreinit_exit.cpp
    coreinit/coreinit_expheap.cpp
    coreinit/coreinit_fastmutex.cpp
    coreinit/coreinit_frameheap.cpp
    coreinit/coreinit_fs.cpp
    coreinit/coreinit_fs_client.cpp
    coreinit/coreinit_fs_dir.cpp
    coreinit/coreinit_fs_file.cpp
    coreinit/coreinit_fs_path.cpp
    coreinit/coreinit_fs_stat.cpp
    coreinit/coreinit_ghs.cpp
    coreinit/coreinit_ghs_typeinfo.cpp
    coreinit/coreinit_interrupts.cpp
    coreinit/coreinit_internal_idlock.cpp
    coreinit/coreinit_lockedcache.cpp
    coreinit/coreinit_mcp.cpp
    coreinit/coreinit_memheap.cpp
    coreinit/coreinit_memlist.cpp
    coreinit/coreinit_memory.cpp
    coreinit/coreinit_messagequeue.cpp
    coreinit/coreinit_mutex.cpp
    coreinit/coreinit_rendezvous.cpp
    coreinit/coreinit_scheduler.cpp
    coreinit/coreinit_semaphore.cpp
    coreinit/coreinit_shared.cpp
    coreinit/coreinit_spinlock.cpp
    coreinit/coreinit_systeminfo.cpp
    coreinit/coreinit_taskqueue.cpp
    coreinit/coreinit_thread.cpp
    coreinit/coreinit_time.cpp
    coreinit/coreinit_unitheap.cpp
    coreinit/coreinit_userconfig.cpp
    erreula/erreula.cpp
    erreula/erreula_errorviewer.cpp
    gx2/gx2.cpp
    gx2/gx2_addrlib.cpp
    gx2/gx2_aperture.cpp
    gx2/gx2_cbpool.cpp
    gx2/gx2_clear.cpp
    gx2/gx2_contextstate.cpp
    gx2/gx2_dds.cpp
    gx2/gx2_debug.cpp
    gx2/gx2_display.cpp
    gx2/gx2_displaylist.cpp
    gx2/gx2_draw.cpp
    gx2/gx2_enum_string.cpp
    gx2/gx2_event.cpp
    gx2/gx2_fetchshader.cpp
    gx2/gx2_format.cpp
    gx2/gx2_mem.cpp
    gx2/gx2_query.cpp
    gx2/gx2_registers.cpp
    gx2/gx2_sampler.cpp
    gx2/gx2_shaders.cpp
    gx2/gx2_state.cpp
    gx2/gx2_surface.cpp
    gx2/gx2_swap.cpp
    gx2/gx2_temp.cpp
    gx2/gx2_tessellation.cpp
    gx2/gx2_texture.cpp
    gx2/gx2r_buffer.cpp
    gx2/gx2r_resource.cpp
    gx2/gx2r_surface.cpp
    mic/mic.cpp
    mic/mic_core.cpp
    nn_ac/nn_ac.cpp
    nn_ac/nn_ac_core.cpp
    nn_acp/nn_acp.cpp
    nn_acp/nn_acp_device.cpp
    nn_acp/nn_acp_title.cpp
    nn_act/nn_act.cpp
    nn_act/nn_act_core.cpp
    nn_boss/nn_boss.cpp
    nn_boss/nn_boss_init.cpp
    nn_boss/nn_boss_nettasksetting.cpp
    nn_boss/nn_boss_playreportsetting.cpp
    nn_boss/nn_boss_rawultasksetting.cpp
    nn_boss/nn_boss_task.cpp
    nn_boss/nn_boss_taskid.cpp
    nn_boss/nn_boss_tasksetting.cpp
    nn_boss/nn_boss_title.cpp
    nn_boss/nn_boss_titleid.cpp
    nn_fp/nn_fp.cpp
    nn_fp/nn_fp_friends.cpp
    nn_fp/nn_fp_init.cpp
    nn_ndm/nn_ndm.cpp
    nn_ndm/nn_ndm_init.cpp
    nn_nfp/nn_nfp.cpp
    nn_nfp/nn_nfp_detection.cpp
    nn_nfp/nn_nfp_init.cpp
    nn_nfp/nn_nfp_settings.cpp
    nn_olv/nn_olv.cpp
    nn_olv/nn_olv_downloadedcommunitydata.cpp
    nn_olv/nn_olv_downloadedtopicdata.cpp
    nn_olv/nn_olv_init.cpp
    nn_olv/nn_olv_uploadeddatabase.cpp
    nn_olv/nn_olv_uploadedpostdata.cpp
    nn_result.cpp
    nn_save/nn_save.cpp
    nn_save/nn_save_core.cpp
    nn_save/nn_save_dir.cpp
    nn_save/nn_save_file.cpp
    nn_temp/nn_temp.cpp
    nn_temp/nn_temp_core.cpp
    nn_temp/nn_temp_dir.cpp
    nsysnet/nsysnet.cpp
    nsysnet/nsysnet_socket_lib.cpp
    nsysnet/nsysnet_ssl.cpp
    padscore/padscore.cpp
    padscore/padscore_kpad.cpp
    padscore/padscore_kpad_status.cpp
    padscore/padscore_wpad.cpp
    proc_ui/proc_ui.cpp
    proc_ui/proc_ui_core.cpp
    snd_core/snd_core.cpp
    snd_core/snd_core_ai.cpp
    snd_core/snd_core_core.cpp
    snd_core/snd_core_device.cpp
    snd_core/snd_core_vs.cpp
    swkbd/swkbd.cpp
    swkbd/swkbd_core.cpp
    sysapp/sysapp.cpp
    sysapp/sysapp_title.cpp
    vpad/vpad.cpp
    vpad/vpad_core.cpp
    vpad/vpad_status.cpp
    zlib125/zlib125.cpp
    zlib125/zlib125_core.cpp
    )

set(HEADER_FILES
    coreinit/coreinit.h
    coreinit/coreinit_alarm.h
    coreinit/coreinit_atomic64.h
    coreinit/coreinit_cache.h
    coreinit/coreinit_core.h
    coreinit/coreinit_debug.h
    coreinit/coreinit_device.h
    coreinit/coreinit_dynload.h
    coreinit/coreinit_enum.h
    coreinit/coreinit_event.h
    coreinit/coreinit_exception.h
    coreinit/coreinit_exit.h
    coreinit/coreinit_expheap.h
    coreinit/coreinit_fastmutex.h
    coreinit/coreinit_frameheap.h
    coreinit/coreinit_fs.h
    coreinit/coreinit_fs_client.h
    coreinit/coreinit_fs_dir.h
    coreinit/coreinit_fs_file.h
    coreinit/coreinit_fs_path.h
    coreinit/coreinit_fs_stat.h
    coreinit/coreinit_ghs.h
    coreinit/coreinit_ghs_typeinfo.h
    coreinit/coreinit_interrupts.h
    coreinit/coreinit_internal_idlock.h
    coreinit/coreinit_internal_queue.h
    coreinit/coreinit_ios.h
    coreinit/coreinit_lockedcache.h
    coreinit/coreinit_mcp.h
    coreinit/coreinit_memheap.h
    coreinit/coreinit_memlist.h
    coreinit/coreinit_memory.h
    coreinit/coreinit_messagequeue.h
    coreinit/coreinit_mutex.h
    coreinit/coreinit_rendezvous.h
    coreinit/coreinit_scheduler.h
    coreinit/coreinit_semaphore.h
    coreinit/coreinit_shared.h
    coreinit/coreinit_spinlock.h
    coreinit/coreinit_systeminfo.h
    coreinit/coreinit_taskqueue.h
    coreinit/coreinit_thread.h
    coreinit/coreinit_time.h
    coreinit/coreinit_unitheap.h
    coreinit/coreinit_userconfig.h
    erreula/erreula.h
    erreula/erreula_errorviewer.h
    gx2/gx2.h
    gx2/gx2_addrlib.h
    gx2/gx2_aperture.h
    gx2/gx2_cbpool.h
    gx2/gx2_clear.h
    gx2/gx2_contextstate.h
    gx2/gx2_dds.h
    gx2/gx2_debug.h
    gx2/gx2_display.h
    gx2/gx2_displaylist.h
    gx2/gx2_draw.h
    gx2/gx2_enum.h
    gx2/gx2_enum_string.h
    gx2/gx2_event.h
    gx2/gx2_format.h
    gx2/gx2_mem.h
    gx2/gx2_query.h
    gx2/gx2_registers.h
    gx2/gx2_sampler.h
    gx2/gx2_shaders.h
    gx2/gx2_state.h
    gx2/gx2_surface.h
    gx2/gx2_swap.h
    gx2/gx2_temp.h
    gx2/gx2_tessellation.h
    gx2/gx2_texture.h
    gx2/gx2r_buffer.h
    gx2/gx2r_resource.h
    gx2/gx2r_surface.h
    mic/mic.h
    mic/mic_core.h
    nn_ac/nn_ac.h
    nn_ac/nn_ac_core.h
    nn_ac/nn_ac_result.h
    nn_acp/nn_acp.h
    nn_acp/nn_acp_device.h
    nn_acp/nn_acp_title.h
    nn_act/nn_act.h
    nn_act/nn_act_core.h
    nn_act/nn_act_result.h
    nn_boss/nn_boss.h
    nn_boss/nn_boss_init.h
    nn_boss/nn_boss_nettasksetting.h
    nn_boss/nn_boss_playreportsetting.h
    nn_boss/nn_boss_rawultasksetting.h
    nn_boss/nn_boss_result.h
    nn_boss/nn_boss_task.h
    nn_boss/nn_boss_taskid.h
    nn_boss/nn_boss_tasksetting.h
    nn_boss/nn_boss_title.h
    nn_boss/nn_boss_titleid.h
    nn_ffl.h
    nn_fp/nn_fp.h
    nn_fp/nn_fp_friends.h
    nn_fp/nn_fp_init.h
    nn_ndm/nn_ndm.h
    nn_ndm/nn_ndm_init.h
    nn_nfp/nn_nfp.h
    nn_nfp/nn_nfp_detection.h
    nn_nfp/nn_nfp_init.h
    nn_nfp/nn_nfp_result.h
    nn_nfp/nn_nfp_settings.h
    nn_olv/nn_olv.h
    nn_olv/nn_olv_downloadedcommunitydata.h
    nn_olv/nn_olv_downloadedtopicdata.h
    nn_olv/nn_olv_init.h
    nn_olv/nn_olv_result.h
    nn_olv/nn_olv_uploadeddatabase.h
    nn_olv/nn_olv_uploadedpostdata.h
    nn_result.h
    nn_save/nn_save.h
    nn_save/nn_save_core.h
    nn_save/nn_save_dir.h
    nn_save/nn_save_file.h
    nn_temp/nn_temp.h
    nn_temp/nn_temp_core.h
    nn_temp/nn_temp_dir.h
    nsysnet/nsysnet.h
    nsysnet/nsysnet_socket_lib.h
    nsysnet/nsysnet_ssl.h
    padscore/padscore.h
    padscore/padscore_kpad.h
    padscore/padscore_kpad_status.h
    padscore/padscore_wpad.h
    proc_ui/proc_ui.h
    proc_ui/proc_ui_core.h
    snd_core/snd_core.h
    snd_core/snd_core_ai.h
    snd_core/snd_core_core.h
    snd_core/snd_core_device.h
    snd_core/snd_core_result.h
    snd_core/snd_core_vs.h
    swkbd/swkbd.h
    swkbd/swkbd_core.h
    sysapp/sysapp.h
    sysapp/sysapp_title.h
    vpad/vpad.h
    vpad/vpad_core.h
    vpad/vpad_status.h
    zlib125/zlib125.h
    )

add_library(modules STATIC ${SOURCE_FILES} ${HEADER_FILES})
